versioned_docs/version-2.12/reference/subsystems/coverage-py.mdx
---
title: coverage-py
description: |
  Configuration for Python test coverage measurement.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Configuration for Python test coverage measurement.

Backend: <span className="color--primary">`pants.backend.python`</span>

Config section: <span className="color--primary">`[coverage-py]`</span>

<span className={styles.options}>

## Basic options

### `filter`

<Option
  cli_repr={`--coverage-py-filter="['<str>', '<str>', ...]"`}
  env_repr='PANTS_COVERAGE_PY_FILTER'
  toml_repr={`[coverage-py]
filter = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

A list of Python modules or filesystem paths to use in the coverage report, e.g. `[&#x27;helloworld_test&#x27;, &#x27;helloworld/util/dirutil&#x27;].

Both modules and directory paths are recursive: any submodules or child paths, respectively, will be included.

If you leave this off, the coverage report will include every file in the transitive closure of the address/file arguments; for example, `test ::` will include every Python file in your project, whereas `test project/app_test.py` will include `app_test.py` and any of its transitive dependencies.

</Option>

### `report`

<Option
  cli_repr={`--coverage-py-report="[<CoverageReportType>, <CoverageReportType>, ...]"`}
  env_repr='PANTS_COVERAGE_PY_REPORT'
  toml_repr={`[coverage-py]
report = [
    <CoverageReportType>,
    <CoverageReportType>,
    ...,
]`}
  one_of='console, xml, html, raw, json'
  default_repr={`[\n  "console"\n]`}
>

Which coverage report type(s) to emit.

</Option>

### `global_report`

<Option
  cli_repr={`--[no-]coverage-py-global-report`}
  env_repr='PANTS_COVERAGE_PY_GLOBAL_REPORT'
  toml_repr={`[coverage-py]
global_report = <bool>`}
  default_repr={`False`}
>

If true, Pants will generate a global coverage report.

The global report will include all Python source files in the workspace and not just those depended on by the tests that were run.

</Option>

### `fail_under`

<Option
  cli_repr={`--coverage-py-fail-under=<float>`}
  env_repr='PANTS_COVERAGE_PY_FAIL_UNDER'
  toml_repr={`[coverage-py]
fail_under = <float>`}
  default_repr={`None`}
>

Fail if the total combined coverage percentage for all tests is less than this number.

Use this instead of setting fail_under in a coverage.py config file, as the config will apply to each test separately, while you typically want this to apply to the combined coverage for all tests run.

Note that you must generate at least one (non-raw) coverage report for this check to trigger.

Note also that if you specify a non-integral value, you must also set [report] precision properly in the coverage.py config file to make use of the decimal places. See https://coverage.readthedocs.io/en/latest/config.html.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--coverage-py-version=<str>`}
  env_repr='PANTS_COVERAGE_PY_VERSION'
  toml_repr={`[coverage-py]
version = <str>`}
  default_repr={`coverage[toml]>=5.5,<5.6`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--coverage-py-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_COVERAGE_PY_EXTRA_REQUIREMENTS'
  toml_repr={`[coverage-py]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--coverage-py-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_COVERAGE_PY_INTERPRETER_CONSTRAINTS'
  toml_repr={`[coverage-py]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--coverage-py-lockfile=<str>`}
  env_repr='PANTS_COVERAGE_PY_LOCKFILE'
  toml_repr={`[coverage-py]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.12.1/src/python/pants/backend/python/subsystems/coverage_py.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants generate-lockfiles --resolve=coverage-py`.

As explained at https://www.pantsbuild.org/v2.12/docs/python-third-party-dependencies, lockfile generation via `generate-lockfiles` does not always work and you may want to manually generate the lockfile. You will want to set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `console_script`

<Option
  cli_repr={`--coverage-py-console-script=<str>`}
  env_repr='PANTS_COVERAGE_PY_CONSOLE_SCRIPT'
  toml_repr={`[coverage-py]
console_script = <str>`}
  default_repr={`coverage`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--coverage-py-entry-point=<str>`}
  env_repr='PANTS_COVERAGE_PY_ENTRY_POINT'
  toml_repr={`[coverage-py]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `output_dir`

<Option
  cli_repr={`--coverage-py-output-dir=<str>`}
  env_repr='PANTS_COVERAGE_PY_OUTPUT_DIR'
  toml_repr={`[coverage-py]
output_dir = <str>`}
  default_repr={`{distdir}/coverage/python`}
>

Path to write the Pytest Coverage report to. Must be relative to the build root.

</Option>

### `config`

<Option
  cli_repr={`--coverage-py-config=<file_option>`}
  env_repr='PANTS_COVERAGE_PY_CONFIG'
  toml_repr={`[coverage-py]
config = <file_option>`}
  default_repr={`None`}
>

Path to an INI or TOML config file understood by coverage.py (https://coverage.readthedocs.io/en/stable/config.html).

Setting this option will disable `[coverage-py].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]coverage-py-config-discovery`}
  env_repr='PANTS_COVERAGE_PY_CONFIG_DISCOVERY'
  toml_repr={`[coverage-py]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include any relevant config files during runs (`.coveragerc`, `setup.cfg`, `tox.ini`, and `pyproject.toml`).

Use `[coverage-py].config` instead if your config is in a non-standard location.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
